--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 
         messaging.requestPermission().then(function () {
             console.log('Notification Permission Granted');
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('firebase-messaging-sw.js')
+                .then(function(registration) {
+                    console.log('Registration successful, scope is:', registration.scope);
+                }).catch(function(err) {
+                    console.log('Service worker registration failed, error:', err);
+                });
+            }
             return messaging.getToken();
         })
         .then(function (token) {
